buildscript {
	ext {
		springBootVersion = '2.0.4.RELEASE'
	}
	repositories {
		mavenCentral()
	}
	dependencies {
		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
	}
}

apply plugin: 'java'
apply plugin: 'idea'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'

group = 'us.m410.deathvalley.example'
version = '0.1.0-SNAPSHOT'
sourceCompatibility = 1.8

repositories {
	mavenCentral()
	mavenLocal()
}

dependencies {
	compile('org.springframework.boot:spring-boot-starter-web')
	compile('org.springframework.boot:spring-boot-starter-data-jpa')
    compile('us.m410.deathvalley:death-valley:1.0.0-SNAPSHOT')
    compile('com.h2database:h2:1.4.197')

    compile('javax.xml.bind:jaxb-api:2.3.0')
    compile('com.sun.xml.bind:jaxb-core:2.3.0')

    annotationProcessor('org.projectlombok:lombok:1.18.2')
    compileOnly('org.projectlombok:lombok:1.18.2')

    runtime('org.springframework.boot:spring-boot-devtools')

    testCompile('org.springframework.boot:spring-boot-starter-test') {
        exclude group: 'junit', module: 'junit'
        exclude group: 'org.assertj', module: 'assertj-core'
        exclude group: 'org.skyscreamer', module: 'jsonassert'
    }
    testImplementation('org.junit.jupiter:junit-jupiter-api:5.2.0')
    testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.2.0')
}

test {
    jvmArgs '--illegal-access=deny', '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
    useJUnitPlatform {
        excludeEngines 'junit-vintage'
    }
}